Inicio da estilização do projeto, baixei as imagens e começei a estilização do projeto no arquivo style.css, os seguintes:
body
header
header a

--- a/index.html
+++ b/index.html
@@ -1,18 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>DevClub</title>
 </head>
+
 <body>
 
-<header>
-    <a href="">Home</a>
-    <a href="">Informaçãoes</a>
-    <a href="">Fale Conosco</a>
-</header>
+    <header>
+        <a href="">Home</a>
+        <a href="">Informaçãoes</a>
+        <a href="">Fale Conosco</a>
+    </header>
 
-    
+    <main class="container">
+        <div class="list">
+            <div class="list-item">
+
+                <img src="./img/Bali.jpg" alt="Imagem1">
+
+                <div class="content"> <!--Div de conteúdo  -->
+                    <h2>Bali</h2>
+                    <p>Bali é um lugar que desperta a imaginação e encanta o coração. Conhecida como a "Ilha dos
+                        Deuses", ela parece um pedaço de paraíso flutuando no meio do vasto oceano Índico. Suas
+                        paisagens são uma mistura fascinante de praias de areia branca, arrozais verdes que se estendem
+                        até onde a vista alcança e montanhas vulcânicas que se erguem majestosas, cobertas por uma
+                        vegetação exuberante.
+                        Bali é uma ilha que toca a alma, deixando uma marca profunda e inesquecível. Ela é a promessa de
+                        dias mais lentos, de simplicidade e harmonia. É uma terra que convida a viver o presente, a se
+                        conectar com a natureza e a redescobrir a paz que existe dentro de cada um de nós.</p>
+                    <div class="buttons">
+                        <button>Saiba mais</button>
+                        <button>Acessar</button>
+
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="list-item">
+
+                <img src="./img/França.jpg" alt="Imagem2">
+
+                <div class="content"> <!--Div de conteúdo  -->
+                    <h2>Paris</h2>
+                    <p>A França é um país que inspira, encanta e seduz. É uma terra onde a história, a arte e a cultura
+                        se encontram em perfeita harmonia, criando uma atmosfera única e inesquecível. Desde os campos
+                        de lavanda na Provença até as montanhas nevadas dos Alpes, passando pelas vibrantes ruas de
+                        Paris, cada canto da França tem sua própria personalidade, cheia de charme e elegância.</p>
+                    <div class="buttons">
+                        <button>Saiba mais</button>
+                        <button>Acessar</button>
+
+                    </div>
+
+                </div>
+            </div>
+
+
+            <div class="list-item">
+
+                <img src="./img/Roma.jpg" alt="Imagem3">
+
+                <div class="content"> <!--Div de conteúdo  -->
+                    <h2>Roma</h2>
+                    <p> Roma, a "Cidade Eterna", é um lugar onde o passado e o presente se encontram de maneira
+                        impressionante. Caminhar por suas ruas é como viajar no tempo, entre as glórias do Império
+                        Romano e o charme moderno de uma cidade vibrante e acolhedora. Roma é uma cidade que não apenas
+                        se vê, mas se sente; cada esquina revela um pedaço de história, um monumento antigo, uma fonte
+                        encantadora ou uma praça cheia de vida.</p>
+                    <div class="buttons">
+                        <button>Saiba mais</button>
+                        <button>Acessar</button>
+
+                    </div>
+
+                </div>
+            </div>
+
+
+            <div class="list-item">
+
+                <img src="./img/veneza.jpg" alt="Imagem4">
+
+                <div class="content"> <!--Div de conteúdo  -->
+                    <h2>Veneza</h2>
+                    <p>Veneza é poesia e mistério, beleza e nostalgia. Ela é a promessa de um romance à moda antiga, de
+                        uma aventura entre canais e palácios, de um lugar onde a história e a arte se encontram em uma
+                        dança graciosa sobre as águas. É uma cidade que encanta e permanece na memória, como uma bela
+                        pintura que nunca se apaga.</p>
+                    <div class="buttons">
+                        <button>Saiba mais</button>
+                        <button>Acessar</button>
+
+                    </div>
+
+                </div>
+            </div>
+
+
+
+
+        </div>
+    </main>
+
 </body>
+
 </html>
