Edição da parte main no css

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <img src="./img/Bali.jpg" alt="Imagem1">
 
                 <div class="content"> <!--Div de conteúdo  -->
-                    <h2>Bali</h2>
-                    <p>Bali é um lugar que desperta a imaginação e encanta o coração. Conhecida como a "Ilha dos
+                    <h2 class="title">Bali</h2>
+                    <p class="description">Bali é um lugar que desperta a imaginação e encanta o coração. Conhecida como a "Ilha dos
                         Deuses", ela parece um pedaço de paraíso flutuando no meio do vasto oceano Índico. Suas
                         paisagens são uma mistura fascinante de praias de areia branca, arrozais verdes que se estendem
                         até onde a vista alcança e montanhas vulcânicas que se erguem majestosas, cobertas por uma
@@ -50,8 +50,8 @@
                 <img src="./img/França.jpg" alt="Imagem2">
 
                 <div class="content"> <!--Div de conteúdo  -->
-                    <h2>Paris</h2>
-                    <p>A França é um país que inspira, encanta e seduz. É uma terra onde a história, a arte e a cultura
+                    <h2 class="title">Paris</h2>
+                    <p class="description">A França é um país que inspira, encanta e seduz. É uma terra onde a história, a arte e a cultura
                         se encontram em perfeita harmonia, criando uma atmosfera única e inesquecível. Desde os campos
                         de lavanda na Provença até as montanhas nevadas dos Alpes, passando pelas vibrantes ruas de
                         Paris, cada canto da França tem sua própria personalidade, cheia de charme e elegância.</p>
@@ -70,8 +70,8 @@
                 <img src="./img/Roma.jpg" alt="Imagem3">
 
                 <div class="content"> <!--Div de conteúdo  -->
-                    <h2>Roma</h2>
-                    <p> Roma, a "Cidade Eterna", é um lugar onde o passado e o presente se encontram de maneira
+                    <h2 class="title">Roma</h2>
+                    <p class="description"> Roma, a "Cidade Eterna", é um lugar onde o passado e o presente se encontram de maneira
                         impressionante. Caminhar por suas ruas é como viajar no tempo, entre as glórias do Império
                         Romano e o charme moderno de uma cidade vibrante e acolhedora. Roma é uma cidade que não apenas
                         se vê, mas se sente; cada esquina revela um pedaço de história, um monumento antigo, uma fonte
@@ -91,8 +91,8 @@
                 <img src="./img/veneza.jpg" alt="Imagem4">
 
                 <div class="content"> <!--Div de conteúdo  -->
-                    <h2>Veneza</h2>
-                    <p>Veneza é poesia e mistério, beleza e nostalgia. Ela é a promessa de um romance à moda antiga, de
+                    <h2 class="title">Veneza</h2>
+                    <p class="description">Veneza é poesia e mistério, beleza e nostalgia. Ela é a promessa de um romance à moda antiga, de
                         uma aventura entre canais e palácios, de um lugar onde a história e a arte se encontram em uma
                         dança graciosa sobre as águas. É uma cidade que encanta e permanece na memória, como uma bela
                         pintura que nunca se apaga.</p>
